# rxt_skills_panda

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: GrabObject.action  PutObject.action
launch/: Panda.launch  robxtask_start.sh
scripts/python/PANDA_action_server_py/: panda_action_client.py  panda_action_server.py  panda_autorun_ubuntu.desktop  panda_controller.py  self_registration.py
scripts/python/PANDA_ros_aas_registration/: PANDA_instance.json  PANDA_registration_file.json  PANDA_type.json  self_registration.py
src/cpp/: PandaPositions.cpp  PandaPositions.h  PandaRobot.cpp  info  panda_control.cpp  panda_franka_joints.cpp
